--- a/package.json
+++ b/package.json
@@ -10,8 +10,18 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/native-stack": "^6.9.18",
+    "@react-navigation/stack": "^6.3.21",
+    "@types/react-native-vector-icons": "^6.4.18",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-asset": "^2.1.1",
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
